--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Rock Dodger! (Beta)</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
